# ffmpeg-cmake-example

./: CMakeLists.txt  README.md  main.cpp
CMakeModules/: FindFFmpeg.cmake
lib/ffmpeg/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
